feat(cbdc): add endpoints to manage compliance providers
